--- a/app/views/team/show.erb
+++ b/app/views/team/show.erb
@@ -6,8 +6,8 @@
 
 <% @heroes.each do |hero| %>
   <div class="hero">
-    <h2>Hero Name: <%= ship.name %></h2><br><br>
-    <p>Hero Power: <%= ship.type %></p><br>
-    <p>Hero Biography: <%= ship.booty %></p>
+    <h2>Hero Name: <%= hero.name %></h2><br><br>
+    <p>Hero Power: <%= hero.power %></p><br>
+    <p>Hero Biography: <%= hero.biography %></p>
   </div><br>
 <% end %>
