--- a/app/views/team/show.erb
+++ b/app/views/team/show.erb
@@ -6,7 +6,7 @@
 
 <% @heroes.each do |hero| %>
   <div class="hero">
-    <h2>Hero Name: <%= hero.name %></h2><br>
+    <h2>Hero Name: <%= hero.name %></h2>
     <p>Hero Power: <%= hero.power %></p>
     <p>Hero Biography: <%= hero.biography %></p>
   </div><br>
