--- a/app/views/team/new.erb
+++ b/app/views/team/new.erb
@@ -1,4 +1,5 @@
 <form action='/teams' method="POST">
+  <h1>Create a Team and Heroes!</h1>
   <h2>Team</h2>
   <label for="team_name">Name</label><br>
   <input id="ream_name" type="text" name="team[name]" /><br>
