--- a/app/views/team/new.erb
+++ b/app/views/team/new.erb
@@ -11,8 +11,8 @@
   <input id="member1_name" type="text" name="team[heroes][][name]" /><br>
   <label for="member1_power">Power</label><br>
   <input id="member1_power" type="text" name="team[heroes][][power]" /><br>
-  <label for="member1_biography">Biography</label><br>
-  <input id="member1_biography" type="text" name="team[heroes][][biography]" /><br><br>
+  <label for="member1_bio">Biography</label><br>
+  <input id="member1_bio" type="text" name="team[heroes][][biography]" /><br><br>
 
   <h2>Hero 2</h2>
   <label for="member2_name">Name</label><br>
