--- a/app/views/team/new.erb
+++ b/app/views/team/new.erb
@@ -19,16 +19,16 @@
   <input id="member2_name" type="text" name="team[heroes][][name]" /><br>
   <label for="member2_power">Power</label><br>
   <input id="member2_power" type="text" name="team[heroes][][power]" /><br>
-  <label for="member2_biography">Biography</label><br>
-  <input id="member2_biography" type="text" name="team[heroes][][biography]" /><br><br>
+  <label for="member2_bio">Biography</label><br>
+  <input id="member2_bio" type="text" name="team[heroes][][biography]" /><br><br>
 
   <h2>Hero 3</h2>
   <label for="member3_name">Name</label><br>
   <input id="member3_name" type="text" name="team[heroes][][name]" /><br>
   <label for="member3_power">Power</label><br>
   <input id="member3_power" type="text" name="team[heroes][][power]" /><br>
-  <label for="member3_biography">Biography</label><br>
-  <input id="member3_biography" type="text" name="team[heroes][][biography]" /><br><br>
+  <label for="member3_bio">Biography</label><br>
+  <input id="member3_bio" type="text" name="team[heroes][][biography]" /><br><br>
 
   <input type="submit" value="Submit">
 </form>
