--- a/app/views/team/new.erb
+++ b/app/views/team/new.erb
@@ -30,5 +30,5 @@
   <label for="member3_bio">Biography</label><br>
   <input id="member3_bio" type="text" name="team[heroes][][biography]" /><br><br>
 
-  <input type="submit" value="Submit">
+  <input type="submit" value="submit">
 </form>
